--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,8 @@ main{
 
     @import 'abilitiesshow';
     @import 'abilitiesshow-skilladjustments';
+    
+    @import 'gallery';
 }
  
 @import 'footer';
