--- a/scss/_abilitiesshow-skilladjustments.scss
+++ b/scss/_abilitiesshow-skilladjustments.scss
@@ -1,10 +1,10 @@
 
-    .abilities-show{
+    .abilities-show .all-abilities{
         .ability{
 
             // Game Development
             .card:nth-child(1) svg circle:nth-child(2){
-                stroke: rgb(186, 186, 186); 
+                stroke: rgb(0, 162, 255); 
                 stroke-dashoffset: calc(440 - (440 * 10)/100);
             }
 
@@ -16,13 +16,13 @@
 
             // Art
             .card:nth-child(3) svg circle:nth-child(2){
-                stroke: #de4e25;
+                stroke: rgb(130, 243, 0);
                 stroke-dashoffset: calc(440 - (440 * 10)/100);
             }
 
             // Math
             .card:nth-child(4) svg circle:nth-child(2){
-                stroke: rgb(130, 243, 0);
+                stroke: #e787a7;
                 stroke-dashoffset: calc(440 - (440 * 10)/100);
             }
 
@@ -37,74 +37,74 @@
 
             // Unity
             .card:nth-child(1) svg circle:nth-child(2){
-                stroke: rgb(0, 243, 182);
+                stroke: #333;
                 stroke-dashoffset: calc(440 - (440 * 75)/100);
             }
 
             // C#
             .card:nth-child(2) svg circle:nth-child(2){
-                stroke: rgb(0, 243, 182);
+                stroke: #333;
                 stroke-dashoffset: calc(440 - (440 * 75)/100);
             }
 
             // Photoshop
             .card:nth-child(3) svg circle:nth-child(2){
-                stroke: rgb(0, 243, 182);
-                stroke-dashoffset: calc(440 - (440 * 10)/100);
+                stroke: #333;
+                stroke-dashoffset: calc(440 - (440 * 65)/100);
             }
 
             // 3DS Max
             .card:nth-child(4) svg circle:nth-child(2){
-                stroke: rgb(0, 243, 182);
-                stroke-dashoffset: calc(440 - (440 * 10)/100);
+                stroke: #333;
+                stroke-dashoffset: calc(440 - (440 * 60)/100);
             }
 
             // Python
             .card:nth-child(5) svg circle:nth-child(2){
-                stroke: rgb(0, 243, 182);
-                stroke-dashoffset: calc(440 - (440 * 10)/100);
+                stroke: #333;
+                stroke-dashoffset: calc(440 - (440 * 40)/100);
             }
 
             // Github
             .card:nth-child(6) svg circle:nth-child(2){
-                stroke: rgb(0, 243, 182);
-                stroke-dashoffset: calc(440 - (440 * 10)/100);
+                stroke: #333;
+                stroke-dashoffset: calc(440 - (440 * 50)/100);
             }
 
             // SQL Server
             .card:nth-child(7) svg circle:nth-child(2){
-                stroke: rgb(0, 243, 182);
-                stroke-dashoffset: calc(440 - (440 * 10)/100);
+                stroke: #333;
+                stroke-dashoffset: calc(440 - (440 * 35)/100);
             }
 
             // HTML
             .card:nth-child(8) svg circle:nth-child(2){
-                stroke: rgb(0, 243, 182);
-                stroke-dashoffset: calc(440 - (440 * 10)/100);
+                stroke: #333;
+                stroke-dashoffset: calc(440 - (440 * 30)/100);
             }
 
             // CSS
             .card:nth-child(9) svg circle:nth-child(2){
-                stroke: rgb(0, 243, 182);
-                stroke-dashoffset: calc(440 - (440 * 10)/100);
+                stroke: #333;
+                stroke-dashoffset: calc(440 - (440 * 30)/100);
             }
 
             // Javascript
             .card:nth-child(10) svg circle:nth-child(2){
-                stroke: rgb(0, 243, 182);
-                stroke-dashoffset: calc(440 - (440 * 10)/100);
+                stroke: #333;
+                stroke-dashoffset: calc(440 - (440 * 50)/100);
             }
 
             // Word
             .card:nth-child(11) svg circle:nth-child(2){
-                stroke: rgb(0, 243, 182);
-                stroke-dashoffset: calc(440 - (440 * 10)/100);
+                stroke: #333;
+                stroke-dashoffset: calc(440 - (440 * 70)/100);
             }
 
             // Powerpoint
             .card:nth-child(12) svg circle:nth-child(2){
-                stroke: rgb(0, 243, 182);
-                stroke-dashoffset: calc(440 - (440 * 10)/100);
+                stroke: #333;
+                stroke-dashoffset: calc(440 - (440 * 60)/100);
             }
         }
     }
