--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,6 +3,7 @@ footer{
     background-color: rgb(51, 51, 51);
     color: #fff;
     height: 2.5rem;
+    z-index: 10;
     span{
         margin-left: 2rem;
         line-height: 2.5rem;
