--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,23 @@
 
 main{
     min-height: calc(100vh - 2.5rem);
+
+    position: relative;
+    background: url("../img/backgrounds/bg1.jpg");
+    background-attachment: fixed;
+    background-size: cover;
+    z-index: 0;
+    &::after{
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba($primary-color, 0.75);
+        z-index: -1;
+    }
+
     @import 'showoff';
 
     @import 'topicsview';
@@ -15,6 +32,10 @@ main{
     @import 'abilitiesshow-skilladjustments';
     
     @import 'gallery';
+
+    @import 'about';
+    
+    @import 'contact';
 }
  
 @import 'footer';
